bk_ida/gccida/g1/round_push
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/round_push/src/explow.c:1395:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)size->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/round_push/src/explow.c:1405:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/round_push/src/explow.c:1413:42: error: use of undeclared identifier 'machine_mode'
v9 = expand_divmod( 0, TRUNC_DIV_EXPR, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v7, v8, 0LL, 1); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/round_push/src/explow.c:1415:23: error: use of undeclared identifier 'machine_mode'
return expand_mult( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v9, v10, 0LL, 1); 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/round_push/src/obj/explow.o] Error 1
